# butter_finger_sim

./: .gitattributes  .gitignore  CLAUDE.md  MAC_SETUP.md  README.md  SIM_SETUP.md  pyproject.toml  requirements-sim.txt
config/: actions.yaml  camera.yaml  geometry.yaml  idle.yaml  joints.yaml  poses.yaml  tracking.yaml
examples/: camera_snapshot.py  diagnose_face_camera.py  emotion_showcase.py  face_tracking.py  go_home.py  idle_motion.py  joint_sliders.py  pi_sweep_base.py  pi_test_pose.py  real_face_tracking.py  run_action.py  scripted_motion.py  view_robot.py
models/: butter_finger_simple.urdf
models/meshes/: base_link.stl  forearm_link.stl  turret_link.stl  upper_arm_link.stl  wrist_link.stl
scripts/: generate_urdf.py
src/butter_finger/: __init__.py  actions.py  arm.py  camera.py  config.py  idle.py
src/butter_finger/backends/: __init__.py  pwm_robot_arm.py  pybullet_arm.py  raspberry_pi_arm.py
src/butter_finger/perception/: __init__.py  attention.py  config.py  detection.py  sources.py  tracker.py
tests/: conftest.py  test_actions.py  test_camera.py  test_cli_backends.py  test_config_files.py  test_emotion_showcase.py  test_face_tracking.py  test_idle.py  test_pwm_robot_arm.py  test_raspberry_pi_arm.py  test_source_syntax.py  test_urdf_structure.py
