[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "butter-finger-sim"
version = "0.1.0"
description = "Simplified PyBullet digital clone of the Butter Finger four-joint desktop robot arm"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24,<3",
    "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
# PyBullet is only installed on the simulation machine (Linux primary, Mac fallback).
sim = ["pybullet>=3.2.5,<4", "Pillow>=12.3,<13"]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
